fix: nav on mobile

--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -32,15 +32,17 @@
 @media screen and (max-width: 900px) {
   .footer {
     padding: 0;
-    z-index: 999;
-    width: 85%;
+    width: 100%;
     font-size: 0.8em;
+    margin-left: 0;
 
     &__socialitem {
       display: inline;
       font-size: 1.5em;
       margin-right: 1em;
       margin-top: -1em;
+      position: relative;
+      z-index: 9999;
     }
 
     &__socials {
