--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -72,7 +72,7 @@
   .header {
     position: fixed;
     bottom: 0;
-    z-index: 998;
+    z-index: 999;
     width: 100%;
     height: 35px;
     background-color: black;
