--- a/src/sass/partials/_release.scss
+++ b/src/sass/partials/_release.scss
@@ -65,7 +65,7 @@
 
 @media screen and (max-width: 900px) {
   .release {
-    z-index: 9999;
+    z-index: 900;
     width: 100%;
     margin-left: -2em;
     display: absolute;
